--- a/views/cash/paymentdone.ejs
+++ b/views/cash/paymentdone.ejs
@@ -2,5 +2,30 @@
   <link rel="stylesheet" href="/stylesheets/paymentdone.css">
 </head>
 <div class="paymentdone">
-  
+  <div class="box">
+    <span class="title">결제완료</span>
+    <div class="content">
+      <p class="paymentTitle">결제가 완료되었습니다.</p>
+      <img src="images/success-svgrepo-com.svg" alt="">
+      <div class="item">
+        <div class="left">결제 내역</div>
+        <div class="right">11,000원 <b>(VAT포함)</b></div>
+      </div>
+      <div class="item">
+        <div class="left">결제 방법</div>
+        <div class="right">신용카드</div>
+      </div>
+      <div class="item">
+        <div class="left">결제 아이디</div>
+        <div class="right">moon@storicha.in</div>
+      </div>
+      <div class="btn">
+        <button>나의 캐시 지갑 보기</button>
+      </div>
+      <div class="back">
+        <img onclick="alert('돌아가기')" src="images/arrow-back-outline.svg" alt="">
+        <span>돌아가기</span>
+      </div>
+    </div>
+  </div>
 </div>
