--- a/views/cash/paymentdone.ejs
+++ b/views/cash/paymentdone.ejs
@@ -23,7 +23,7 @@
         <button>나의 캐시 지갑 보기</button>
       </div>
       <div class="back">
-        <img onclick="alert('돌아가기')" src="images/arrow-back-outline.svg" alt="">
+        <img onclick="alert('돌아가기')" src="images/Union.svg" alt="">
         <span>돌아가기</span>
       </div>
     </div>
