--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -1,8 +1,29 @@
 .nav{
-  width: calc(100% - 40px);
+  width: 100%;
   display: flex;
   justify-content: center;
-  padding: 8px 20px;
   background-color: #141414;
   color: white;
+}
+.nav .box{
+  width: 100%;
+  max-width: 428px;
+  padding: 8px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.nav .box div{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav .box .left{
+  justify-content: flex-start;
+  gap: 8px;
+}
+.nav .box .right{
+  justify-content: flex-end;
 }
