--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,3 +1,12 @@
 <div class="nav">
-  TORI Cash
+  <div class="box">
+    <div class="left">
+      <img src="/images/icon/BackBtn.svg" alt="">
+      <img src="/images/icon/ShapeCopy.svg" alt="">
+    </div>
+    <div class="center">
+      <%=head%>
+    </div>
+    <div class="right"></div>
+  </div>
 </div>
