--- a/public/stylesheets/paymentdone.css
+++ b/public/stylesheets/paymentdone.css
@@ -40,8 +40,7 @@
   font-family: 'Tium';
 }
 .box .content img{
-  width: 60px;
-  color: #F2C572;
+  width: 80px;
   margin-top: 25px;
   padding-bottom: 50px;
 }
@@ -104,6 +103,7 @@
   font-family: 'Tium';
   font-size: 1rem;
   margin-top: 30px;
+  cursor: pointer;
 }
 .box .content .back{
   display: flex;
@@ -117,12 +117,12 @@
   padding: 0;
   width: 24px;
   cursor: pointer;
-  margin-top: 4px;
 }
 .box .content .back  span{
   font-size: 1rem;
   font-family: 'Tium';
-  color: #9F9F9F;
+  color: #000;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
