--- a/views/cash/cashwallet.ejs
+++ b/views/cash/cashwallet.ejs
@@ -31,18 +31,18 @@
       <div class="detail">
         <img src="images/icon/won.svg" alt="">
         <p>충전액 ></p>
-        <p><b></b>10TC</p>
+        <p><b>10</b>TC</p>
       </div>
       <div class="detail">
         <img id="cash_icon" src="images/icon/coinplus.png" alt="">
         <p>월구독액 ></p>
-        <p>10TC</p>
+        <p><b>10</b>TC</p>
         <span>{N}일뒤 소멸 예정</span>
       </div>
       <div class="detail">
         <img id="cash_icon2" src="images/icon/coinplus.svg" alt="">
-        <p>적입액 ></p>
-        <p>10TC</p>
+        <p>적립액 ></p>
+        <p><b>10</b>TC</p>
       </div>
     </div>
     <div class="breakdown">
