--- a/views/cash/paymentdone.ejs
+++ b/views/cash/paymentdone.ejs
@@ -6,7 +6,7 @@
     <span class="title">결제완료</span>
     <div class="content">
       <p class="paymentTitle">결제가 완료되었습니다.</p>
-      <img src="images/success-svgrepo-com.svg" alt="">
+      <img src="images/icon/CheckCircle.svg" alt="">
       <div class="item">
         <div class="left">결제 내역</div>
         <div class="right">11,000원 <b>(VAT포함)</b></div>
@@ -23,7 +23,7 @@
         <button>나의 캐시 지갑 보기</button>
       </div>
       <div class="back">
-        <img onclick="alert('돌아가기')" src="images/Union.svg" alt="">
+        <img onclick="alert('돌아가기')" src="images/icon/return.svg" alt="">
         <span>돌아가기</span>
       </div>
     </div>
