--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,5 +1,5 @@
 <div class="nav">
-  <div class="box">
+  <div class="nav_box">
     <div class="left">
       <img src="/images/icon/BackBtn.svg" alt="">
       <img src="/images/icon/ShapeCopy.svg" alt="">
@@ -7,6 +7,6 @@
     <div class="center">
       <%=head%>
     </div>
-    <div class="right"></div>
+    <div class="right"></div>
   </div>
 </div>
