--- a/public/stylesheets/cashwallet.css
+++ b/public/stylesheets/cashwallet.css
@@ -71,6 +71,11 @@
   gap: 6px;
   font-size: 0.8rem;
 }
+.box .payment_detail .detail b{
+  letter-spacing: -0.8px;
+  font-size: 1rem;
+  margin-right: 2px;
+}
 .box .payment_detail .detail span{
   font-size: 0.55rem;
   margin-top: -4px;
@@ -147,7 +152,7 @@
 }
 .box .breakdown .breakdown_payment .receipt p{
   letter-spacing: -0.9px;
-  font-family: 'NEXON Lv2 Gothic Bold';
+  font-family: 'NEXON Lv2 Gothic';
   font-size: 0.72rem;
   margin-top: 10px;
 }
