--- a/views/cash/cashwallet.ejs
+++ b/views/cash/cashwallet.ejs
@@ -172,7 +172,7 @@
         </div>
         <div class="more_view">
           <p>결제내역 더보기</p>
-          <p onclick="moreview()">▼</p>
+          <img src="/images/underArrow.svg" onclick="moreview()" alt="">
         </div>
       </div>
     </div>
