--- a/public/stylesheets/cashwallet.css
+++ b/public/stylesheets/cashwallet.css
@@ -1,5 +1,6 @@
 .cashwallet{
   position: relative;
+  z-index: 10;
   width: 358px;
   padding: 40px 35px;
   background-color: white;
@@ -73,7 +74,7 @@
 }
 .box .payment_detail .detail b{
   letter-spacing: -0.8px;
-  font-size: 1rem;
+  font-size: 1.4rem;
   margin-right: 2px;
 }
 .box .payment_detail .detail span{
@@ -252,6 +253,11 @@
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  color: #A0A0A0;
+}
+.more_view img{
+  margin-top: 8px;
+  cursor: pointer;
 }
 #focus.head{
   border: 2px solid #E8E8E8;
