--- a/public/stylesheets/paymentdone.css
+++ b/public/stylesheets/paymentdone.css
@@ -1,4 +1,6 @@
 .paymentdone{
+  position: relative;
+  z-index: 10;
   width: 358px;
   height: auto;
   min-height: 700px;
@@ -93,7 +95,8 @@
 }
 .box .content .btn button{
   border-radius: 4px;
-  background-color: #DD4C4C;
+  background-color: #0A0A0A;
+  border-radius: 28px;
   border: none;
   width: 100%;
   min-width: 150px;
