--- a/public/stylesheets/topup.css
+++ b/public/stylesheets/topup.css
@@ -1,4 +1,6 @@
 .topup{
+  position: relative;
+  z-index: 10;
   width: 396px;
   height: auto;
   padding: 40px 16px;
@@ -45,8 +47,8 @@
 }
 .topup .box .direct input{
   position: relative;
-  width: calc(100% - 86px);
-  padding: 12px 76px 12px 10px;
+  width: calc(100% - 96px);
+  padding: 12px 86px 12px 10px;
   font-size: 1rem;
   outline: none;
   text-align: right;
@@ -57,7 +59,7 @@
   position: absolute;
   right: 14px;
   top: 13px;
-  background-color: #DD4C4C;
+  background-color: #212121;
   color: white;
   border-radius: 4px;
   border: none;
@@ -141,7 +143,7 @@
   padding: 12px 25px;
   margin-top: 30px;
   width: calc(100% - 62px);
-  background-color: #DD4C4C;
+  background-color: #212121;
   border-radius: 6px;
   cursor: pointer;
 }
