--- a/public/stylesheets/cashwallet.css
+++ b/public/stylesheets/cashwallet.css
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 10;
   width: 358px;
+  min-height: calc(100vh - 150px);
   padding: 40px 35px;
   background-color: white;
   margin-top: 20px;
