--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css'>
     <link rel="stylesheet" href="/stylesheets/nav.css">
     <link rel="stylesheet" href="/stylesheets/footer.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </head>
-  <body>
+  <body data-theme="dark">
     <img class="back_mask" src="/images/Mask.svg" alt="">
     <%- include('nav.ejs') %>
     <%- include(page) %>
