--- a/views/series.ejs
+++ b/views/series.ejs
@@ -176,8 +176,45 @@
         </div>
       </div>
     </div>
+    <p class="more_view_title" style="color: white;">이 작가의 다른 작품</p>
     <div class="more_view">
-    
+      <div class="more_view_content">
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+        <div class="thumbnail">
+          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+          <div class="cover"></div>
+          <p>지금 우리 학교는</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
