--- a/views/series.ejs
+++ b/views/series.ejs
@@ -119,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="select_list">
+          <div class="select_list" id="maxHheighttt">
             <div class="item">
               <input class="item_check" type="checkbox" id="list-label1" name="itemlist" onclick="checkItem()">
               <label for="list-label1"></label>
@@ -172,49 +172,132 @@
                 <button>대여하기</button>
               </div>
             </div>
+            <div class="item">
+              <input class="item_check" type="checkbox" id="list-label5" name="itemlist" onclick="checkItem()">
+              <label for="list-label5"></label>
+              <div class="item_image">
+                <img src="/images/img/61237892137236176123741.png" alt="">
+              </div>
+              <div class="item_text">
+                <p><b>EP</b> 5</p>
+                <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
+                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <button>대여하기</button>
+              </div>
+            </div>
+            <div class="item">
+              <input class="item_check" type="checkbox" id="list-label6" name="itemlist" onclick="checkItem()">
+              <label for="list-label6"></label>
+              <div class="item_image">
+                <img src="/images/img/61237892137236176123741.png" alt="">
+              </div>
+              <div class="item_text">
+                <p><b>EP</b> 6</p>
+                <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
+                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <button>대여하기</button>
+              </div>
+            </div>
+            <div class="item">
+              <input class="item_check" type="checkbox" id="list-label6" name="itemlist" onclick="checkItem()">
+              <label for="list-label6"></label>
+              <div class="item_image">
+                <img src="/images/img/61237892137236176123741.png" alt="">
+              </div>
+              <div class="item_text">
+                <p><b>EP</b> 6</p>
+                <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
+                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <button>대여하기</button>
+              </div>
+            </div>
           </div>
+          <script type="text/javascript">
+            function more_view_content(){
+              let obj = document.querySelector(".select");
+              obj.classList.add("max_view");
+            }
+          </script>
+          <button class="more_view_btn" onclick="more_view_content()"><ion-icon name="chevron-down-outline"/></ion-icon>&nbsp;작품 더 보기</button>
         </div>
       </div>
     </div>
     <p class="more_view_title" style="color: white;">이 작가의 다른 작품</p>
     <div class="more_view">
-      <div class="more_view_content">
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
-        </div>
-        <div class="thumbnail">
-          <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
-          <div class="cover"></div>
-          <p>지금 우리 학교는</p>
+      <div class="slideBox">
+        <div class="more_view_content">
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는1</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는1</p>
+          </div>
+          <div class="thumbnail">
+            <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+            <div class="cover"></div>
+            <p>지금 우리 학교는1</p>
+          </div>
         </div>
       </div>
+      <script>
+        const more_view_left = () => {
+          let matrixX = getComputedStyle(document.querySelector(".more_view_content")).transform;
+          if(event.target.className.includes("thumbnail_left")){
+            if(matrixX !== "none"){
+              document.querySelector(".more_view_content").style.transform = `translateX(${(Number(matrixX.split(",")[4]) - 132.0000053903332)}px)`;
+            } else {
+              document.querySelector(".more_view_content").style.transform = "translateX(-132.0000053903332px)";
+            }
+          } else {
+            if(matrixX.split(",")[4] > 5){
+
+            } else if(matrixX !== "none" && !(matrixX.split(",")[4] > -5  && matrixX.split(",")[4] < 5)){
+              document.querySelector(".more_view_content").style.transform = `translateX(${(Number(matrixX.split(",")[4]) + 132.0000053903332)}px)`;
+            }
+          }
+        }
+      </script>
+      <ion-icon class="thumbnail_left" name="chevron-back-outline" onclick="more_view_left()"></ion-icon>
+      <ion-icon class="thumbnail_right" name="chevron-forward-outline" onclick="more_view_left()"></ion-icon>
     </div>
   </div>
 </div>
