--- a/views/series.ejs
+++ b/views/series.ejs
@@ -9,6 +9,8 @@
     <div class="left">
       <div class="imgbox">
         <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
+        <div class="imageDark"></div>
+        <p class="mobile_image_title">양과 여우들의 밤</p>
       </div>
       <div class="likeMark">
         <div class="like">
@@ -16,6 +18,28 @@
         </div>
         <div class="mark">
           <ion-icon name="bookmark"></ion-icon>10,262
+        </div>
+      </div>
+      <div class="mobile_infoBox">
+        <div>
+          <p class="head">평균</p>
+          <p><ion-icon name="star"></ion-icon>4.8</p>
+        </div>
+        <div>
+          <p class="head">북마크</p>
+          <p><ion-icon name="bookmark-outline"></ion-icon>10,282</p>
+        </div>
+        <div>
+          <p class="head">장르</p>
+          <p>액션, 판타지</p>
+        </div>
+        <div>
+          <p class="head">포멧라벨</p>
+          <p>웹소설</p>
+        </div>
+        <div>
+          <p class="head">에피소드</p>
+          <p>148</p>
         </div>
       </div>
       <div class="first_episode">
